ressources/index.css
* {
    margin: 0;
    padding: 0;
    align-items: none;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}


body{
    height: 100%;
    margin:0 auto;
    overflow: hidden;
    font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
}

html{
    height: 100%;
    padding-left: 1.5vw;
    padding-right: 1.5vw;
    overflow: hidden;

}

.line {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
}

.imageInside {
 align-self: stretch;
 overflow: hidden;
}
.pimageInside {
 overflow: hidden;
 height: 100%;
}
.bloc {
    flex: 1 ;
    padding-top:20px;
    padding-bottom:10px;
    width:100%;
    padding-right: 1vw;
    padding-left: 1vw;
}

.scrollzone {
    height: 72vh ;
    overflow-y: scroll;
}

.mobile_div{
    display:none;
}

.project_title {
    width: 35% ;
    margin-left: auto; 
    margin-right: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 600;
}

/*
*::-webkit-scrollbar {
    display: none;
}
  
*{
    -ms-overflow-style: none;  
    scrollbar-width: none; 
}*/

{
    scrollbar-width: thin;
}

::-webkit-scrollbar {
    width: 2px;
    height: 2px;
}
::-webkit-scrollbar-button {
    background: white;
}
::-webkit-scrollbar-track-piece {
    background: white;
}
::-webkit-scrollbar-thumb {
    background: grey;
}

::-webkit-scrollbar-track-piece:start {
    background: transparent;
    margin-top: 25px;
}

.img_normal {
    max-width: 100%;
}
.fig_img{
    max-width: 100%;
    object-fit: contain;
    width: 100%;
    margin-bottom: 20px;
}

.figrand_img{
    max-height: 100%;
    object-fit: contain;
    height: 100%;
    margin-bottom: 20px;
}

.cover_img{
    max-height: 70vh;
    object-fit: contain;
    width: 100%;
    margin-bottom: 20px;
}

.home_img{
    max-height: 30vh;
}
img {
}

video {
    width:100%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

p{
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

@media all and (min-width: 2000px) {
    .B0 {
      display: none;
    }
    .B1 {
      flex: 1 ;
    }
    .B2 {
      flex: 2 ;
    }
    .B3 {
      flex: 3 ;
    }
    .B4 {
      flex: 4 ;
    }
    .B5 {
      flex: 5 ;
    }
    .B6 {
      flex: 6 ;
    }
    .B7 {
      flex: 7 ;
    }
    .B8 {
      flex: 8 ;
    }
    .B9 {
      flex: 1 100%;
    }
    .B9 > h1,.B9 > h2,.B9 > h3,.B9 > h4,.B9 > h5 {
        text-align: center!important;
    }
    body{
        font-size:24px !important;
    }
    h5{
        font-size:24px !important;
    }
}

@media all and (min-width: 1000px) and (max-width: 2000px) {
    .M0 {
      display: none;
    }
    .M1 {
      flex: 1 ;
    }
    .M2 {
      flex: 2 ;
    }
    .M3 {
      flex: 3 ;
    }
    .M4 {
      flex: 4 ;
    }
    .M5 {
      flex: 5 ;
    }
    .M6 {
      flex: 6 ;
    }
    .M7 {
      flex: 7 ;
    }
    .M8 {
      flex: 8 ;
    }
    .M9 {
      flex: 1 100%;
    }
    .M9 >h1,.M9 >h2,.M9 >h3,.M9 >h4,.M9 >h5 {
        text-align: center!important;
    }
}

@media all and (max-width: 1000px) {
    .S0 {
      display: none;
    }
    .S1 {
      flex: 1 ;
    }
    .S2 {
      flex: 2 ;
    }
    .S3 {
      flex: 3 ;
    }
    .S4 {
      flex: 4 ;
    }
    .S5 {
      flex: 5 ;
    }
    .S6 {
      flex: 6 ;
    }
    .S7 {
      flex: 7 ;
    }
    .S8 {
      flex: 8 ;
    }
    .S9 {
        flex: 1 100%;
    }
    .S9 > h1,.S9 > h2,.S9 > h3,.S9 > h4,.S9 > h5 {
        text-align: center!important;
    }
    body{
        font-size:15px !important;
        margin-left:10px;
    }
    h5{
        font-size:15px !important;
        line-height: 1.2em;
    }
    .mobile_div{
        display:block;
    }
    .project_title {
        width: auto !important;
        margin-left: auto; 
        margin-right: 0;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: 600;
        margin-bottom: 20px;
        margin-left: 10px;
        margin-right: 10px;
        margin-top: -15px;
    
    }
    .top_name {
        margin-bottom: 6vh !important;
    }
    a:hover {
    font-style: normal !important;
    font-weight: normal !important;
}
    
}



/*///////////////USER CENTRIX ZONE/////////////*/


/*LINKS*/
a {
    text-decoration: none;
    color: black;
}
a:active,
a:hover {
    font-style: italic;
    font-weight: 600;
}



/*TYPOGRAPHY*/
body{
  line-height: 1em;
  font-size:22px;
}
p, pre {
  margin-left:10px;
  margin-right:10px;

  margin-top: 5px;
  margin-bottom: 5px;
}

pre{
  padding: 16px;
  overflow: auto;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}
 hr {
  border-bottom-color: #eee;
  height: 0.1em;
  padding: 0;
  margin: 24px 0;
  background-color: #e7e7e7;
  border: 0;
}
strong {
    font-style: italic;
    font-weight: 600;
    font-family: Arial, Helvetica, sans-serif;
}
em {
  font-style: italic;
  font-weight: 600;
  font-family: Arial, Helvetica, sans-serif;
}


h1,
h2,
h3,
h4,
{
  font-weight: 200;
  margin-top: 25px;
  margin-bottom: 10px;
  line-height: 1.5;
  margin-left:10px;
  margin-right:10px;
}
h5{
    font-weight: 200;
    font-size:22px;
}
h6 {
  color: #777;
  text-align: center;
  margin-top: 5px;
  font-weight: 200;
  margin-top: 25px;
  margin-bottom: 10px;
  line-height: 1.5;
  margin-left:10px;
  margin-right:10px;
}

/*LISTS*/
li>p {
  margin-top: 16px;
}
li+li {
  margin-top: 0.25em;
}
ul,ol{
  font-weight: 400;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 2em;
  margin-bottom: 10px;

}

/*QUOTE*/
blockquote {
  margin: 0;
  margin-top: 0;
  margin-bottom: 16px;
  padding: 0 1em;
  color: #777;
  border-left: 0.25em solid #ddd;
  background-color: #f6f8fa;

}
blockquote>:first-child {
  margin-top: 0;
}
blockquote>:last-child {
  margin-bottom: 0;
}

/*TABLE*/
table {

  border-spacing: 0;
  border-collapse: collapse;
  margin-top: 0;
  margin-bottom: 16px;
  width: 100%;
  overflow: auto;
  font-weight: 400;
}
table th {
  font-weight: bold;
}
table th,
table td {
  padding: 6px 13px;
  border: 1px solid #ddd;
}
table tr {
  background-color: #fff;
  border-top: 1px solid #ccc;
}
table tr:nth-child(2n) {
  background-color: #f8f8f8;
}

/*CODE*/
code {
  color: #1bb572;
  white-space: pre-wrap;
  font-family: monospace, monospace;
  font-size: 1em;
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  margin: 0;
  background-color: #f6f8fa;
  border-radius: 3px;
}

#x {

    height: 400px;
    position: relative;
}

#x .icon {
    z-index: 2;
    max-width: 20vw;
}

.top_name {
    margin-top: 4vh !important;        
    margin-bottom: 12vh;
}

.cover_zone{
    background-image: url('../ressources/images/casette2.00_27_34_24.Still001.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.menu{
    text-align: center;
}

